@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-01T08:10:49Z",
+  "timestamp" : "2023-10-01T16:09:56Z",
   "count_outdated" : 1005,
   "uniques_outdated" : 637,
-  "count" : 1039,
+  "count" : 1040,
   "uniques" : 660,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
